--- a/index.html
+++ b/index.html
@@ -2,29 +2,19 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>ShowShow</title>
   </head>
   <body>
 
-    <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId            : '1533255823487746',
-          autoLogAppEvents : true,
-          xfbml            : true,
-          version          : 'v3.1'
-        });
-      };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "https://connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-    </script>
+     <form>
+       <input type="text" class="form-control pb-0 mb-0" id="search-text" placeholder="pesquisar">
+       <button class="btn icon-search" type="button" id="search-btn">Buscar</button>
+     </form>
 
 
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
