--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
   </head>
   <body>
 
-     <form>
-       <input type="text" class="form-control pb-0 mb-0" id="search-text" placeholder="pesquisar">
-       <button class="btn icon-search" type="button" id="search-btn">Buscar</button>
-     </form>
+    <form class="">
+      <input type="text" class="form-control pb-0 mb-0" id="search-text" placeholder="Nome do artista">
+      <button class="btn icon-search" type="submit" id="search-btn">Buscar</button>
+    </form>
+
+    <section id="shows">
+      <div id="artist-avatar"></div>
+      <div id="artist-status"></div>
+      <ul id="show-show"></ul>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"crossorigin="anonymous"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
+    <script src="https://momentjs.com/downloads/moment-with-locales.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
